position and direction message added to build file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,6 +47,7 @@ find_package(catkin REQUIRED COMPONENTS
    GulliViewPositions.msg
    Path.msg
    Position.msg
+   PositionAndDirection.msg
  )
 
 ## Generate services in the 'srv' folder
