--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,11 +51,9 @@ find_package(catkin REQUIRED COMPONENTS
  )
 
 ## Generate services in the 'srv' folder
- add_service_files(
-   FILES
-   PathRequest.srv
-   ReworkPath.srv
- )
+# add_service_files(
+#   FILES
+# )
 
 ## Generate actions in the 'action' folder
 # add_action_files(
