--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,6 +52,7 @@ find_package(catkin REQUIRED COMPONENTS
 
 # Generate services in the 'srv' folder
  add_service_files(
+   FILES
    RequestPath.srv
  )
 
